--- a/package.json
+++ b/package.json
@@ -12,13 +12,26 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "dev": "node --env-file .env index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "node --env-file .env publish.cjs"
+    "publish": "node --env-file .env publish.js"
   },
-  "devDependencies": {
-    "unzipper": "^0.12.3"
+  "dependencies": {
+    "@bitrise/eslint-plugin": "^2.12.0",
+    "copy-webpack-plugin": "^13.0.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.42.0",
+    "eslint-plugin-jsdoc": "^46.2.6",
+    "express": "^4.19.2",
+    "jsdom": "^26.0.0",
+    "prettier": "^3.2.5",
+    "style-loader": "^3.3.3",
+    "unzipper": "^0.12.3",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.2.1",
+    "webpack-hot-middleware": "^2.26.1"
   }
 }
