create build script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "dev": "node --env-file .env index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "node --env-file .env publish.js"
+    "publish": "node --env-file .env paligo.js publish 19 ./out",
+    "build": "node build.js"
   },
   "dependencies": {
     "@bitrise/eslint-plugin": "^2.12.0",
