--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-hot-middleware": "^2.26.1"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^5.6.3"
+    "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2"
   }
 }
