--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "scripts": {
     "dev": "node --env-file .env index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "node --env-file .env paligo.js publish 19 ./out",
+    "paligo:list": "node --env-file .env paligo.js list",
+    "paligo:publish": "node --env-file .env paligo.js publish 19 ./out",
+    "paligo:download_latest": "node --env-file .env paligo.js download_latest 19 ./out",
     "build": "node build.js"
   },
   "dependencies": {
