[skip publish] gen ai search and language selector

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      PALIGO_API_KEY: ${{ secrets.PALIGO_API_KEY }}
+      PALIGO_API_KEY: ${{ secrets.PALIGO_API_KEY || '' }}
+      GEN_SEARCH_WIDGET_ID: ${{ vars.GEN_SEARCH_WIDGET_ID || '' }}
       COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
 
     steps:
