--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "paligo:list": "node --env-file .env paligo.js list",
     "paligo:publish": "node --env-file .env paligo.js publish 19 ./out",
     "paligo:download_latest": "node --env-file .env paligo.js download_latest 19 ./out",
+    "cloudflare:upload_redirects": "node --env-file .env cloudflare.js",
     "build": "node build.js"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "webpack-hot-middleware": "^2.26.1"
   },
   "devDependencies": {
+    "cloudflare": "^4.5.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2"
   }
