make scripts environment aware

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "author": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --env-file .env index.js",
+    "dev": "./node-with-env.sh index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "paligo:list": "node --env-file .env paligo.js list",
-    "paligo:publish": "node --env-file .env paligo.js publish 19 ./out",
-    "paligo:download_latest": "node --env-file .env paligo.js download_latest 19 ./out",
-    "cloudflare:upload_redirects": "node --env-file .env cloudflare.js",
-    "build": "node build.js"
+    "paligo:list": "./node-with-env.sh paligo.js list",
+    "paligo:publish": "./node-with-env.sh paligo.js publish 19 ./out",
+    "paligo:download_latest": "./node-with-env.sh paligo.js download_latest 19 ./out",
+    "cloudflare:upload_redirects": "./node-with-env.sh cloudflare.js",
+    "build": "./node-with-env.sh build.js"
   },
   "dependencies": {
     "@bitrise/eslint-plugin": "^2.12.0",
