--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Upload redirects to Cloudflare
         run: npm run cloudflare:upload_redirects
 
+      - name: Generate redirect analysis
+        run: node ./redirect_analyzer.js ./deploy/
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
