[skip publish] remove layout-custom-script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
       PALIGO_API_KEY: ${{ secrets.PALIGO_API_KEY || '' }}
       CF_API_TOKEN: ${{ secrets.CF_API_TOKEN || '' }}
       CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID || '' }}
+      GTM_ID: ${{ secrets.GTM_ID || '' }}
       GEN_SEARCH_WIDGET_ID: ${{ vars.GEN_SEARCH_WIDGET_ID || '' }}
       COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
 
