[skip publish] broken links report

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Generate redirect analysis
         run: node ./redirect_analyzer.js ./deploy/
 
+      - name: Generate broken links report
+        run: node ./link_analyzer.js ./deploy/
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
