[skip publish] highlight code blocks

--- a/package.json
+++ b/package.json
@@ -22,23 +22,26 @@
     "cloudflare:upload_redirects": "./node-with-env.sh cloudflare.js",
     "build": "./node-with-env.sh build.js"
   },
+  "dependencies": {
+    "@highlightjs/cdn-assets": "^11.11.1"
+  },
   "devDependencies": {
     "@bitrise/eslint-plugin": "^2.12.0",
+    "cloudflare": "^4.5.0",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.57.1",
     "eslint-plugin-jsdoc": "^46.2.6",
     "express": "^4.19.2",
+    "html-webpack-plugin": "^5.6.3",
     "jsdom": "^26.0.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.2.5",
     "style-loader": "^3.3.3",
     "unzipper": "^0.12.3",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.2.1",
-    "webpack-hot-middleware": "^2.26.1",
-    "cloudflare": "^4.5.0",
-    "html-webpack-plugin": "^5.6.3",
-    "mini-css-extract-plugin": "^2.9.2"
+    "webpack-hot-middleware": "^2.26.1"
   }
 }
