Change runner to self-hosted for deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     env:
       PALIGO_API_KEY: ${{ secrets.PALIGO_API_KEY || '' }}
